--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,8 @@
 AllCops:
-  Excludes:
+  Exclude:
     - 'NotUsed/**/*'
 Metrics/LineLength:
   Max: 100
+Style/ParallelAssignment:
+  Enabled: false
+
